--- a/web2style.css
+++ b/web2style.css
@@ -43,3 +43,7 @@ td:nth-child(2), th:nth-child(2){
 td:nth-child(3), th:nth-child(3){
   background-color: #dabff2;
 }
+
+tr:hover {
+  background-color: blue
+}
