--- a/web2style.css
+++ b/web2style.css
@@ -1,9 +1,9 @@
 h1 {
   font-size: 80px;
   color: yellow; /*backup color*/
-  color: rgba(76,0,122,1);
+  color: black;
   background-color: green; /*backup  colour*/
-  background-color: rgba(182,215,0,1);
+  background-color: #d2e6f7;
   text-align: center;
 }
 
@@ -16,8 +16,22 @@ p {
   font-size: 15px;
 }
 
+body {
+  background: lightyellow;
+}
+
+aside{
+  text-align: right;
+  border: 4px solid black;
+  outline: #dabff2 solid 5px;
+  margin: fixed;
+  width: 50%;
+  padding: 20px;
+}
+
 table {
-  width:50%;
+  table-layout:fixed;
+  width:100%;
 }
 
 
@@ -29,17 +43,23 @@ table,th,td {
 th {
   font-size: 19px;
   text-decoration-line: underline;
-  height:10%;
+  /*height:10%;*/
 }
 
+/*1st column of the table*/
 td:nth-child(1), th:nth-child(1){
   background-color: #d2e6f7;
+  width:33%;
 }
 
+/*2nd column of the table*/
 td:nth-child(2), th:nth-child(2){
   background-color: #e0f7cb;
+  width:33%;
 }
 
+/*3rd column of the table*/
 td:nth-child(3), th:nth-child(3){
   background-color: #dabff2;
+  width:33%;
 }
