--- a/web2style.css
+++ b/web2style.css
@@ -17,7 +17,7 @@ p {
 }
 
 body {
-  background: lightyellow;
+  background: white;
 }
 
 aside{
@@ -67,4 +67,16 @@ td:nth-child(2), th:nth-child(2){
 td:nth-child(3), th:nth-child(3){
   background-color: #dabff2;
   width:45%;
+}
+
+h3 {
+  font-size: 45px;
+  background-color: #000000;
+  color: white;
+}
+
+h4 {
+  font-size: 25px;
+  ;
+  color: black;
 }
