--- a/web2style.css
+++ b/web2style.css
@@ -18,15 +18,6 @@ body {
   background: white;
 }
 
-aside{
-  text-align: right;
-  border: 4px solid black;
-  outline: #dabff2 solid 5px;
-  margin: fixed;
-  width: 50%;
-  padding: 20px;
-}
-
 table {
   table-layout:fixed;
   width:100%;
@@ -75,6 +66,26 @@ td:nth-child(3), th:nth-child(3){
   width:45%;
 }
 
+aside{
+  text-align: center;
+  border: 4px solid black;
+  outline: #dabff2 solid 5px;
+  background-color: rgb(167, 143, 248);
+  margin: fixed;
+  padding: 20px;
+}
+
+button{
+  background-color: pink;
+  border-radius: 3ch;
+}
+
+
+
+
+
+
+/* Topic header fonts*/
 h3 {
   font-size: 45px;
   background-color: #000000;
@@ -82,6 +93,6 @@ h3 {
 }
 
 h4 {
-  font-size: 25px;
+  font-size: 20px;
   color: black;
 }
